<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Intersect Hearthstone</string>

    <!-- Splash Screen -->
    <string name="date">Current Date</string>
    <string name="author_name">Chintan Shah</string>
    <string name="hearthstone_icon_description">Hearthstone Icon</string>

    <!-- Hearthstone Card -->
    <string name="card_name">Name</string>
    <string name="card_type">Type</string>
    <string name="player_class">Player Class</string>
    <string name="hearthstone_card_description">Hearthstone card picture</string>
    <string name="search">Search...</string>
</resources>
