<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SplashScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="@dimen/splash_screen_icon"
            android:layout_height="@dimen/splash_screen_icon"
            android:contentDescription="@string/hearthstone_icon_description"
            android:src="@drawable/ic_hearthstone" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:textSize="@dimen/splash_screen_primary_header" />

        <TextView
            android:id="@+id/author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:textSize="@dimen/splash_screen_secondary_header" />

        <TextView
            android:id="@+id/current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:textSize="@dimen/splash_screen_secondary_header" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>