<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/card_spacing"
    android:layout_marginTop="@dimen/card_spacing"
    android:layout_marginRight="@dimen/card_spacing">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/hearthstone_card_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_image_height"
            android:padding="@dimen/card_spacing"
            android:src="@drawable/ic_hearthstone_card"
            android:contentDescription="@string/hearthstone_card_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/hearthstone_card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_name"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hearthstone_card_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_type"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:id="@+id/hearthstone_card_player_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_class"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>
    </LinearLayout>
</android.support.design.card.MaterialCardView>